# Digital-Library-System

./: README.md
LibraSys/: .gitignore  ARCHITECTURE.md  CHECKLIST.md  CMakeLists.txt  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  UI_CONSISTENCY_CHECKLIST.md  build.bat
LibraSys/Resources/: resources.qrc
LibraSys/src/: main.cpp
LibraSys/src/Models/: Book.h  DataStore.h  LibraryEngine.cpp  LibraryEngine.h
LibraSys/src/UI/: MainWindow.cpp  MainWindow.h
LibraSys/src/UI/Components/: BookCard.cpp  BookCard.h  NavBar.cpp  NavBar.h
LibraSys/src/Utils/: StyleLoader.cpp  StyleLoader.h
